My Assets resolved and minor bug fixing